static/css/base.css
/* ... */
input[type="submit"] {
    margin-top: 4% !important;
    margin-bottom: 2% !important;
}

.main-content .form-group {
    margin: 0 auto !important;
    width: 25% !important;
}

.contact-form {
    margin-top: -2vh !important;
    padding: 0 8%;
}

select, select option {
    border-radius: 0 !important;
    padding: 0 !important;
}

select:focus {
    box-shadow: 3px 3px 15px #7e0167, -3px -3px 10px #7e0167 !important;
}

select:invalid, select option[value=""], 
.my-input::placeholder, 
#id_saved_country {
    color: #aab7c4 !important;
}


/* Checkout & Profile common form styles */

#pay_form fieldset {
    margin: 0 auto !important;
}

#pay_form input, #pay_form fieldset, .my-input {
    width: 40vw;
    font-family: "Montserrat", sans-serif ;
}

#pay_form input[type="checkbox"] {
    width: unset !important;
}


/* Cards */

.card {
    border-color: #50304a !important;
    border-radius: 0 !important;
    background-color: #08080875 !important;
    backdrop-filter: blur(2px);
    max-width: 65vw !important;   
}

.card .btn-link {
    color: #50304a;
    font-size: 1.5rem;
    text-shadow: 1px 1px 4px #9e0081 !important;
}

.card .btn-link:hover {
    color: white;
    text-decoration: none;
}

.card-header {
    background-color: #2f2f2f42 !important;
    backdrop-filter: blur(2px);    
}


/* Bag & checkout (common) */

.img-bag-checkout {
    width: 5vw !important;
}

.price-total {
    font-size: xx-large !important;
    font-weight: bold !important;
    line-height: 1.1em !important;
}

/* Other */

.prpl-shadow {
    box-shadow: 1px 1px 30px #9e008179 !important;
}


/* Media queries */

@media (min-width: 2000.99px) {
    header, footer {
        font-size: xx-large !important;
    }
    
    button {
        height: calc(1.5em + 1.7rem + 2px);
        font-size: x-large !important;
    }

    .bg-frame {
        margin-top: 3%;
    }

    .main-content {
        padding: 4% !important;
        font-size: xx-large !important;
    }

    form {
        font-size: x-large !important;
    }

    label[for="id_remember"] {
        font-size: x-large !important;
    }

    input, #id_saved_country {
        font-size: xx-large !important;
    }

    .small-font {
        font-size: x-large !important;
    }

    h1 {
        font-size: 200% !important;
    }

    h6 {
        font-size: xx-large !important;
    }
}

@media (max-width: 1250px) {

    .details-container {
        width: 95vw;
    }

    .details-buttons {
        flex-direction: column !important;
        justify-content: start !important;
        width: 50vw !important;
    }
}

@media (max-width: 1083px){
    .form-control-lg {
        width: 75% !important;
    }
}

@media (max-width: 991px) {
    main {
        height: 85vh !important;
    }

    .dropdown { 
        position: static !important; 
    } 

    .dropdown-menu {
        text-align: center !important;
}

    .carousel .one, .carousel .two, .carousel .three {
        background-size: 360% !important;
        background-position: top;
        height: 85vh !important;
    }

    .bg-frame {
        height: 45vh !important;
    }

    .main-content {
        margin-top: 2vh !important;
        z-index: 0 !important;
    }

    .allauth-frames {
        margin-top: 8vh !important;
        height: 60vh !important;

    }

    .allauth-frames .main-content {
        padding: 2% !important;
    }

    .form-group {
        width: 35% !important;
    }

    .bg-darkground {
        width: 100vw !important;
        height: 91vh !important;
        background-size: cover;
    }

    .founders {  
        width: 100vw !important;
        height: 35vh !important;
        object-fit: cover;
        object-position: 0 8%;
        position: relative !important;
    }

    .product-img {
        margin-bottom: 10%;
    }

    .details-container {
        padding: 15%;
        text-align: center;
    }

    .details-container .row .row .col-12 > button {
        margin-bottom: 5% !important
    }

    .details-buttons {
        flex-direction: row !important;
        justify-content: space-between !important;
        width: 100% !important;
    }

    .bag {
        padding: 1.3rem !important;
    }

    .border-sm-top {
        border-top: 1px solid white;
    }

    .toast {
        margin-top: 35% !important;
    }

    .toast::-webkit-scrollbar {        
        display: block !important;
    }

    #pay_form fieldset, #userprofile_update {
        width: 90vw !important;
        margin: 0 auto !important;
    }
    
    #pay_form input, #userprofile_update {
        width: 90vw !important;        
    }

    .order-buttons-container {
        width: 100vw !important;
    }

    .img-bag-checkout {
        width: 10vw !important;
    }
    
    .border-checkout {
        border-left: none !important;
    }

    .product-form, .product-form .form-group {
        width: 80vw !important;
        margin: auto;
        padding: 1.5%;
    }

    ::-webkit-scrollbar {
        display: none !important;
    }

    .checkout-products::-webkit-scrollbar {
        display: block !important;
    }

    .table-transparent > tbody {
        width: 95vw !important;
    }
}
/* ... */

